RESOLVED FIXED 114825
Garbage at the top of http://www.technologyreview.com after scrolling
https://bugs.webkit.org/show_bug.cgi?id=114825
Summary Garbage at the top of http://www.technologyreview.com after scrolling
Simon Fraser (smfr)
Reported 2013-04-18 13:16:28 PDT
http://www.technologyreview.com shows garbage at the top on Mac if you scroll down then back up. Regression from r146531
Attachments
Patch (5.39 KB, patch)
2013-04-24 18:18 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2013-04-18 13:16:52 PDT
Simon Fraser (smfr)
Comment 2 2013-04-24 17:55:07 PDT
The element showing the garbage pixels has visibility:hidden, which is not considered by RenderLayer::backgroundIsKnownToBeOpaqueInRect(). Another change I notice that affects this is https://bugs.webkit.org/show_bug.cgi?id=108118. Before that revision, we'd compute that the fixed position element is a simple container layer (yellow border). After that change, it became something that draws content. I haven't been able to make a useful reduction. Most of the time, visibility:hidden just causes us to not parent the compositing layer.
Simon Fraser (smfr)
Comment 3 2013-04-24 18:18:27 PDT
Tim Horton
Comment 4 2013-04-24 18:22:39 PDT
Comment on attachment 199573 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=199573&action=review > LayoutTests/compositing/contents-opaque/visibility-hidden.html:49 > + <nav> > + <ul> > + <li>Some text here</li> > + </ul> > + </nav> TABS
Simon Fraser (smfr)
Comment 5 2013-04-24 18:26:50 PDT
Note You need to log in before you can comment on or make changes to this bug.